--- a/settings/em.properties
+++ b/settings/em.properties
@@ -49,6 +49,7 @@ parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=false
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=false
+parser.decoder.useSimpleModNonterminalMap=true
 #
 #
 # settings specific to language package danbikel.parser.english
