--- a/settings/collins.properties
+++ b/settings/collins.properties
@@ -47,6 +47,7 @@ parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.useCommaConstraint=true
 parser.decoder.useHeadToParentMap=true
+parser.decoder.useSimpleModNonterminalMap=true
 #
 #
 # settings specific to language package danbikel.parser.english
