Added definitions for the following new settings:    parser.modelStructure.package    parser.decoder.useSimpleModNonterminalMap

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -1,6 +1,7 @@
 #     WordNet Parser
 #    Default Settings
 #
+parser.modelStructure.package=danbikel.parser.ms
 parser.language=english
 parser.language.package=danbikel.parser.english
 parser.file.encoding.english=ISO-8859-1
@@ -76,6 +77,7 @@ parser.decoder.useLocalProbabilityCache=false
 parser.decoder.localProbabilityCacheSize=50000
 parser.decoder.useHeadToParentMap=false
 parser.decoder.restorePrunedWords=false
+parser.decoder.useSimpleModNonterminalMap=false
 #
 #
 # settings specific to language package danbikel.parser.english
