Added default value for new parser.headfinder.randomProb setting.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -32,6 +32,7 @@ parser.modelCollection.writeCanonicalEvents=true
 #
 # settings for danbikel.parser.HeadFinder
 parser.headfinder.warnDefaultRule=false
+parser.headfinder.randomProb=0.0
 #
 # settings for danbikel.parser.Training
 parser.training.addGapInfo=false
