Added definition of parser.decoder.useSimpleModNonterminalMap=true.

--- a/settings/chinese.properties
+++ b/settings/chinese.properties
@@ -46,6 +46,7 @@ parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=5
 parser.decoder.useCommaConstraint=true
+parser.decoder.useSimpleModNonterminalMap=true
 #
 #
 # settings specific to language package danbikel.parser.chinese
