--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -24,6 +24,7 @@ parser.probabilityStructure.defaultModelClass=danbikel.parser.Model
 parser.model.precomputeProbabilities=true
 parser.model.collinsDeficientEstimation=false
 parser.model.doPruning=false
+parser.model.pruningThreshold=0.05
 #
 # settings for danbikel.parser.ModelCollection
 #    the following property is ignored when
@@ -77,7 +78,7 @@ parser.decoder.outputHeadLexicalizedLabels=false
 parser.decoder.useLocalProbabilityCache=false
 parser.decoder.localProbabilityCacheSize=50000
 parser.decoder.useHeadToParentMap=false
-parser.decoder.restorePrunedWords=false
+parser.decoder.restorePrunedWords=true
 parser.decoder.useSimpleModNonterminalMap=false
 #
 #
