Added settings to start pruning at beam width of 3.5 and end at 4.0.

--- a/settings/bikel.properties
+++ b/settings/bikel.properties
@@ -47,7 +47,8 @@ parser.decoder.useLowFreqTags=true
 parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
-parser.decoder.pruneFactor=5
+parser.decoder.pruneFactor=3.5
+parser.decoder.maxPruneFactor=4
 parser.decoder.useCommaConstraint=true
 parser.decoder.useHeadToParentMap=true
 parser.decoder.useSimpleModNonterminalMap=true
