Added default for decoder's prune factor increment.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -72,6 +72,7 @@ parser.decoder.useCellLimit=false
 parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
+parser.decoder.pruneFactorIncrement=0.5
 parser.decoder.useCommaConstraint=true
 parser.decoder.useOnlySuppliedTags=false
 parser.decoder.outputHeadLexicalizedLabels=false
