--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -74,6 +74,7 @@ parser.decoder.cellLimit=10
 parser.decoder.usePruneFactor=true
 parser.decoder.pruneFactor=4
 parser.decoder.pruneFactorIncrement=0.5
+parser.decoder.relaxConstraintsAfterBeamWidening=true
 parser.decoder.useCommaConstraint=true
 parser.decoder.useOnlySuppliedTags=false
 parser.decoder.outputHeadLexicalizedLabels=false
