--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -78,6 +78,7 @@ parser.decoder.relaxConstraintsAfterBeamWidening=true
 parser.decoder.useCommaConstraint=true
 parser.decoder.useOnlySuppliedTags=false
 parser.decoder.outputHeadLexicalizedLabels=false
+parser.decoder.outputInsideProbabilities=false
 parser.decoder.useLocalProbabilityCache=false
 parser.decoder.localProbabilityCacheSize=50000
 parser.decoder.useHeadToParentMap=false
