* Fixed critical bug in build.xml: with Ant v1.6.2, now need to specify   a new option called binary when executing the concat task in order to   guarantee that files get concatenated in a byte-by-byte fashion.
* For deploy target in build.xml, eliminated separated gzip step; now assumes
 tar executable accepts the z option for gzip'ing the tar file.

* Adjusted install script header to respect "standardized" version of the tail
 command, which requires the use of a -n option prior to specifying the number
 of lines.

--- a/build.xml
+++ b/build.xml
@@ -320,12 +320,11 @@
         <fileset dir="${deploy.to}"/>
     </chmod>
     <exec dir="${deploy.to}/.." executable="tar">
-	  <arg value="cvf"/>
-	  <arg value="dbparser.tar"/>
+	  <arg value="zcvf"/>
+	  <arg value="${deploy.tgz}"/>
 	  <arg value="${deploy.to.tail}"/>
     </exec>
-    <gzip src="${deploy.to}/../dbparser.tar" zipfile="${deploy.tgz}"/>
-    <concat destfile="${deploy.install.script}">
+    <concat binary="yes" destfile="${deploy.install.script}">
       <filelist dir="."
 	        files="${deploy.install.header} ${deploy.tgz}"/>
     </concat>
