Woops: forgot to specify default value for the new parser.decoder.dontPostProcess setting. Default value is false.

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -79,6 +79,7 @@ parser.decoder.useCommaConstraint=true
 parser.decoder.useOnlySuppliedTags=false
 parser.decoder.outputHeadLexicalizedLabels=false
 parser.decoder.outputInsideProbabilities=false
+parser.decoder.dontPostProcess=false
 parser.decoder.useLocalProbabilityCache=false
 parser.decoder.localProbabilityCacheSize=50000
 parser.decoder.useHeadToParentMap=false
