* Added *-TPC as argument pattern to training-metadata.lisp in Arabic language   package.
* Added danbikel.parser.arabic.Training.markSubjectVPs preprocessing method,
  which converts VP nodes that contain subjects (*-SBJ nodes) as VP-SBJ
  (a kind of parent annotation).

* CKYChart now prunes based on span size of chart item with two different
  beam sizes, that increasingly narrow the existing beam after each of the two
  thresholds.  Currently, the span thresholds are 100 and 120 tokens,
  hard-coded as constants at the top of the CKYChart class.

* Defined CKYItem.headWordIdx method that recursively computes the index
  of the chart item's head word.

* Altered CKYItem.getLabel so that it now prints out start, end and head word
  indices in addition to the boolean indicating whether the node is the head
  child of its parent and the head word and head tag.

* Altered defulat-settings.properties so that maximum sentence length is now
  200 (up from 100).

* HeadTreeNode.getHeadWordLabel method is now protected (was private).

* Added new Settings.clientDeathUponSwitchboardDeath setting.
  * Parser.switchboardFailure method now executes die(true) when the new
    Settings.clientDeathUponSwitchboardDeath setting is true.

* Added implementation to Settings to allow both classes and instances to
  register with the Settings class to receive notifications of setting changes.

* Added machinery in StartSwitchboard to use files that contain one filename
  per line (files of files, or .fof's).

--- a/src/danbikel/parser/default-settings.properties
+++ b/src/danbikel/parser/default-settings.properties
@@ -65,7 +65,7 @@ parser.chart.collinsNPPruneHack=false
 #
 # settings for danbikel.parser.Decoder
 parser.decoder.kBest=1
-parser.decoder.maxSentenceLength=100
+parser.decoder.maxSentenceLength=200
 parser.decoder.maxParseTime=0
 parser.decoder.useLowFreqTags=false
 parser.decoder.substituteWordsForClosedClassTags=false
@@ -121,6 +121,7 @@ parser.switchboardUser.sbMaxRetries=0
 parser.switchboardUser.client.serverFailover=true
 parser.switchboardUser.client.serverMaxRetries=1
 parser.switchboardUser.client.serverRetrySleep=1000
+parser.switchboardUser.client.dieUponSwitchboardDeath=true
 #
 # cache settings for the model structure classes
 #
