--- a/settings/chinese.properties
+++ b/settings/chinese.properties
@@ -5,7 +5,7 @@
 parser.language=chinese
 parser.language.package=danbikel.parser.chinese
 parser.language.wordFeatures=danbikel.parser.chinese.SimpleWordFeatures
-parser.file.encoding.chinese=GB2312
+parser.file.encoding.chinese=utf-8
 parser.downcaseWords=false
 parser.subcatFactoryClass=danbikel.parser.SubcatBagFactory
 parser.shifterClass=danbikel.parser.BaseNPAwareShifter
